--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,21 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@app/*": ["./src/app"],
+      "@api/*": ["./src/api"],
+      "@assets/*": ["./src/assets"],
+      "@components/*": ["./src/components"],
+      "@config/*": ["./src/config"],
+      "@context/*": ["./src/context"],
+      "@hooks/*": ["./src/hooks"],
+      "@lib/*": ["./src/lib"],
+      "@services/*": ["./src/services"],
+      "@stories/*": ["./src/stories"],
+      "@styles/*": ["./src/styles"],
+      "@tests/*": ["./src/tests"],
+      "@types/*": ["./src/types"],
+      "@utils/*": ["./src/utils"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
