--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "babel-plugin-react-compiler": "19.0.0-beta-714736e-20250131",
+    "dotenv": "^16.4.7",
     "next": "15.1.6",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
