--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_656b86eb3aeb4dd"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
@@ -40,6 +41,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "chromatic": "^11.25.2",
     "css-loader": "^7.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
