--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "3.2.4",
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.50.1",
     "@storybook/addon-essentials": "8.5.3",
     "@storybook/addon-interactions": "8.5.3",
     "@storybook/addon-onboarding": "8.5.3",
