initial supabase stuff

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
     "@storybook/addon-themes": "^8.5.3",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.48.1",
     "babel-plugin-react-compiler": "19.0.0-beta-714736e-20250131",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -47,7 +49,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
-    "@types/node": "^20",
+    "@types/node": "^20.17.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.3.4",
@@ -60,8 +62,9 @@
     "jsdom": "^26.0.0",
     "postcss": "^8",
     "postcss-loader": "^8.1.1",
-    "storybook": "8.5.3",
+    "storybook": "8.5.4",
     "style-loader": "^4.0.0",
+    "supabase": "^2.12.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "vite-tsconfig-paths": "^5.1.4",
