--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,md,json,js,jsx,mjs}\""
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@storybook/addon-themes": "^8.5.3",
     "@supabase/ssr": "^0.5.2",
@@ -33,9 +35,11 @@
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "3.2.4",
