--- a/package.json
+++ b/package.json
@@ -20,8 +20,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dismissable-layer": "^1.1.5",
+    "@radix-ui/react-focus-scope": "^1.1.2",
+    "@radix-ui/react-id": "^1.1.0",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-portal": "^1.1.4",
+    "@radix-ui/react-presence": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-use-controllable-state": "^1.1.0",
     "@storybook/addon-themes": "^8.5.3",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
@@ -30,7 +38,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.475.0",
-    "next": "15.1.6",
+    "next": "15.2.2",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
